# NesProJects

./: .gitignore
cpp/: .gitignore  CMakeLists.txt  CMakePresets.json  docs.md  main.cpp
cpp/include/: Cartridge.h  Mapper.h  Mapper0.h  types.h
cpp/include/nes/: Bus.h  CPU.h  Cartridge.h  Mapper.h  Mapper0.h  PPU.h
cpp/src/: Bus.cpp  CPU.cpp  Cartridge.cpp  PPU.cpp
docs/: L02.md  L09.md  L1.md  L10.md  L11.md  L12.md  L13.md  L14.md  L15.md  L16.md  L17.md  L18.md  L20.md  L21.md  L22.md  L23.md  L24.md  L25.md  L26.md  L27.md  L28.md  L29.md  L3.md  L30.md  L31.md  L32.md  L33.md  L34.md  L35.md  L36.md  L37.md  L38.md  L39.md  L4.md  L5.md  L6.md  L7.md  L8.md
rust/: Cargo.toml
rust/cli/: Cargo.toml
rust/cli/src/: main.rs
rust/core/: Cargo.toml
rust/core/src/: cpu.rs
rust/src/: main.rs
rust/src/Core/: mod.rs
rust/src/core/: CPU.rs  cpu.rs
rust/ui/: Cargo.toml
rust/ui/src/: lib.rs
